--- a/aws/Full-PAS-Deployment.yaml
+++ b/aws/Full-PAS-Deployment.yaml
@@ -31,19 +31,19 @@ Resources:
       LogGroupName: !Sub '${LogGroup}'
       LogStreamName: CPMMachine/CPMSetLocalServiceLog
     DeletionPolicy: Retain
-  PSMCfnInitLogStream:
+  PSMUserDataLogStream:
     Type: AWS::Logs::LogStream
     Properties:
       LogGroupName: !Sub '${LogGroup}'
-      LogStreamName: PSMMachine/PSMCfnInitLogStream
+      LogStreamName: PSMMachine/UserDataLog
     DeletionPolicy: Retain
-  PSMConfigurationsLog:
+  PSMConfigurationLogStream:
     Type: AWS::Logs::LogStream
     Properties:
       LogGroupName: !Sub '${LogGroup}'
-      LogStreamName: PSMMachine/PSMConfigurationsLog
+      LogStreamName: PSMMachine/PSMConfigurationLog
     DeletionPolicy: Retain
-  PSMRegistrationLog:
+  PSMRegistrationLogStream:
     Type: AWS::Logs::LogStream
     Properties:
       LogGroupName: !Sub '${LogGroup}'
@@ -830,7 +830,7 @@ Resources:
       IamInstanceProfile: !Ref 'VaultInstancesProfile'
     CreationPolicy:
       ResourceSignal:
-        Timeout: PT10M
+        Timeout: PT15M
     DeletionPolicy: Retain
   VaultDRMachine:
     Type: AWS::EC2::Instance
@@ -883,7 +883,7 @@ Resources:
       IamInstanceProfile: !Ref 'VaultDRInstancesProfile'
     CreationPolicy:
       ResourceSignal:
-        Timeout: PT10M
+        Timeout: PT15M
     DeletionPolicy: Retain
     DependsOn:
       - VaultMachine
@@ -925,7 +925,7 @@ Resources:
       IamInstanceProfile: !Ref ComponentInstanceProfile
     CreationPolicy:
       ResourceSignal:
-        Timeout: PT10M
+        Timeout: PT15M
     DeletionPolicy: Retain
     DependsOn:
       - VaultDRMachine
@@ -967,7 +967,7 @@ Resources:
       IamInstanceProfile: !Ref ComponentInstanceProfile
     CreationPolicy:
       ResourceSignal:
-        Timeout: PT10M
+        Timeout: PT15M
     DeletionPolicy: Retain
     DependsOn:
       - PVWAMachine
@@ -985,72 +985,30 @@ Resources:
           - !Ref PSMAmi
           - !Ref PSMCustomAmi
       InstanceType: !Ref PSMInstanceType
-      UserData: !Base64
-        'Fn::Sub': >-
-          <script>
-          cfn-init.exe -v -s ${AWS::StackId} -r PSMMachine --configsets ascending --region ${AWS::Region}
-          </script>
+      UserData:
+        Fn::Base64: !Sub
+          - |
+            <powershell>
+            $UserDataParams = @{
+              "Region"                        = "${AWS::Region}"
+              "LogGroup"                      = "${LogGroup}"
+              "UserDataLogStream"             = "${PSMUserDataLogStream}"
+              "PSMConfigurationLogStream"     = "${PSMConfigurationLogStream}"
+              "PSMRegistrationLogStream"      = "${PSMRegistrationLogStream}"
+              "VaultAdminUser"                = "Administrator"
+              "SSMAdminPassParameterID"       = "${StoreAdminPassword.SsmId}"
+              "VaultPrivateIP"                = "${VaultIpAddress}"
+              "ComponentHostname"             = "${PSMHostname}"
+              "StackName"                     = "${AWS::StackName}"
+            }
+            C:\CyberArk\Deployment\UserDataScript.ps1 @UserDataParams
+            </powershell>
+          - VaultIpAddress: !Sub '${VaultMachine.PrivateIp},${VaultDRMachine.PrivateIp}'
       KeyName: !Ref KeyName
       IamInstanceProfile: !Ref ComponentInstanceProfile
-    Metadata:
-      'AWS::CloudFormation::Init':
-        configSets:
-          ascending:
-            - configSSMAndHostname
-            - configServices
-            - configSignal
-        configSSMAndHostname:
-          services:
-            windows:
-              AmazonSSMAgent:
-                enabled: true
-                ensureRunning: true
-                files:
-                  - C:\Program Files\Amazon\SSM\Plugins\awsCloudWatch\AWS.EC2.Windows.CloudWatch.json
-          commands:
-            1-cloudwatch:
-              command: !Sub >
-                powershell.exe -File C:\CyberArk\Deployment\CloudWatch.ps1
-                -LogGroup ${LogGroup} -PSMCfnInitLogStream
-                ${PSMCfnInitLogStream} -PSMConfiguration ${PSMConfigurationsLog}
-                -PSMRegistration ${PSMRegistrationLog} -Region ${AWS::Region}
-            2-restartSSM:
-              command: powershell.exe -Command "Restart-Service AmazonSSMAgent"
-              waitAfterCompletion: 60
-              ignoreErrors: true
-            3-addDNSSuffix:
-              command: powershell.exe -Command "Set-DnsClientGlobalSetting -SuffixSearchList ((Get-DnsClientGlobalSetting).SuffixSearchList += 'pas.local')"
-        configServices:
-          commands:
-            1-configuration:
-              command: !Sub
-                - >-
-                  powershell.exe -File
-                  C:\CyberArk\Deployment\PSMConfiguration.ps1 -VaultIpAddress
-                  ${VaultIpAddress} -VaultAdminUser Administrator -VaultPort 1858
-                - VaultIpAddress: !Sub '${VaultMachine.PrivateIp},${VaultDRMachine.PrivateIp}'
-              waitAfterCompletion: 0
-            2-registration:
-              command: !Sub >
-                powershell.exe -File C:\CyberArk\Deployment\PSMRegistration.ps1
-                -VaultAdminUser Administrator -SSMAdminPassParameterID ${StoreAdminPassword.SsmId}
-              waitAfterCompletion: 0
-            3-PSMserviceConfig:
-              command: sc config "CyberArk Privileged Session Manager" start=auto
-              waitAfterCompletion: 0
-            4-ChangeHostname:
-              command: !Sub >
-                powershell.exe -Command Rename-Computer -NewName ${PSMHostname} -Force -Restart
-              waitAfterCompletion: forever
-        configSignal:
-          commands:
-            0-signalCompletion:
-              command: !Sub >
-                "C:\Program Files\Amazon\cfn-bootstrap\cfn-signal.exe" -e %ERRORLEVEL% --stack ${AWS::StackId} --resource PSMMachine --region ${AWS::Region}
-              waitAfterCompletion: 0
     CreationPolicy:
       ResourceSignal:
-        Timeout: PT25M
+        Timeout: PT15M
     DeletionPolicy: Retain
     DependsOn:
       - PVWAMachine
@@ -1165,7 +1123,7 @@ Resources:
                 cfn-signal -e $? --stack ${AWS::StackId} --resource PSMPMachine --region ${AWS::Region}
     CreationPolicy:
       ResourceSignal:
-        Timeout: PT10M
+        Timeout: PT15M
     DeletionPolicy: Retain
     DependsOn:
       - PSMMachine
@@ -1269,7 +1227,7 @@ Resources:
                 cfn-signal -e $? --stack ${AWS::StackId} --resource PTAMachine --region ${AWS::Region}
     CreationPolicy:
       ResourceSignal:
-        Timeout: PT10M
+        Timeout: PT15M
     DeletionPolicy: Retain
     DependsOn:
       - PVWAMachine
