--- a/aws/Full-PAS-Deployment.yaml
+++ b/aws/Full-PAS-Deployment.yaml
@@ -1071,90 +1071,23 @@ Resources:
           - !Ref PTAAmi
           - !Ref PTACustomAmi
       InstanceType: !Ref PTAInstanceType
-      UserData: !Base64
-        'Fn::Sub': |
-          #!/bin/bash -e
-          cfn-init -v --stack ${AWS::StackId} --resource PTAMachine --configsets install_all --region ${AWS::Region}
-          cfn-signal -e $? --stack ${AWS::StackId} --resource PTAMachine --region ${AWS::Region}
+      UserData:
+        Fn::Base64: !Sub
+          - |
+            #!/bin/bash
+            sudo /tmp/register.sh \
+              "aws" \
+              "${VaultIpAddress}" \
+              "${PVWAMachine.PrivateDnsName}" \
+              "Administrator" \
+              "${StoreAdminPassword.SsmId}" \
+              "${PTAHostname}" \
+              "${AWS::Region}" \
+              "${LogGroup}" \
+              "${AWS::StackName}"
+          - VaultIpAddress: !Sub '${VaultMachine.PrivateIp},${VaultDRMachine.PrivateIp}'
       KeyName: !Ref KeyName
       IamInstanceProfile: !Ref ComponentInstanceProfile
-    Metadata:
-      'AWS::CloudFormation::Init':
-        configSets:
-          install_all:
-            - install_logs
-            - install_pta
-        install_logs:
-          files:
-            /opt/aws/amazon-cloudwatch-agent/bin/config.json:
-              content: !Sub |
-                {
-                  "agent": {
-                    "metrics_collection_interval": 10,
-                    "logfile": "/opt/aws/amazon-cloudwatch-agent/logs/amazon-cloudwatch-agent.log",
-                    "run_as_user": "root"
-                  },
-                  "logs": {
-                    "logs_collected": {
-                      "files": {
-                        "collect_list": [
-                          {
-                            "file_path": "/var/log/cloud-init.log",
-                            "log_group_name": "${LogGroup}",
-                            "log_stream_name": "PTAMachine/cloud-init",
-                            "timezone": "Local",
-                            "timestamp_format": "%Y-%m-%dT%H:%M:%S"
-                          },
-                          {
-                            "file_path": "/var/log/cloud-init-output.log",
-                            "log_group_name": "${LogGroup}",
-                            "log_stream_name": "PTAMachine/cloud-init-output",
-                            "timezone": "Local",
-                            "timestamp_format": "%Y-%m-%dT%H:%M:%S"
-                          },
-                          {
-                            "file_path": "/var/log/cfn-init.log",
-                            "log_group_name": "${LogGroup}",
-                            "log_stream_name": "PTAMachine/cfn-init",
-                            "timezone": "Local",
-                            "timestamp_format": "%Y-%m-%dT%H:%M:%S"
-                          },
-                          {
-                            "file_path": "/opt/tomcat/logs/ptaAutomaticConfiguration.log",
-                            "log_group_name": "${LogGroup}",
-                            "log_stream_name": "PTAMachine/ptaAutomaticConfiguration",
-                            "timezone": "Local",
-                            "timestamp_format": "%Y-%m-%dT%H:%M:%S"
-                          },
-                                                    {
-                            "file_path": "/opt/tomcat/logs/diamond.log",
-                            "log_group_name": "${LogGroup}",
-                            "log_stream_name": "PTAMachine/diamond",
-                            "timezone": "Local",
-                            "timestamp_format": "%Y-%m-%dT%H:%M:%S"
-                          }
-                        ]
-                      }
-                    }
-                  }
-                }
-              mode: '000444'
-              owner: root
-              group: root
-          commands:
-            01_install_cloudwatch_agent:
-              command: !Sub >-
-                sudo rpm -U https://amazoncloudwatch-agent-${AWS::Region}.s3.${AWS::Region}.amazonaws.com/redhat/amd64/latest/amazon-cloudwatch-agent.rpm
-            02_start_cloudwatch_agent:
-              command: sudo /opt/aws/amazon-cloudwatch-agent/bin/amazon-cloudwatch-agent-ctl -a fetch-config -m ec2 -c file:/opt/aws/amazon-cloudwatch-agent/bin/config.json -s
-        install_pta:
-          commands:
-            01-executeptaconfigurationscript: 
-              command: !Sub >-
-                sudo /tmp/register.sh aws "${VaultMachine.PrivateIp}" "${PVWAMachine.PrivateDnsName}" Administrator "${StoreAdminPassword.SsmId}" ${AWS::Region} "${VaultDRMachine.PrivateIp}"
-            99-SignalCompletion:
-              command: !Sub >-
-                cfn-signal -e $? --stack ${AWS::StackId} --resource PTAMachine --region ${AWS::Region}
     CreationPolicy:
       ResourceSignal:
         Timeout: PT15M
